# bundeshaushalt-api

./: CNAME  README.md  README_en.md  generator_config.yaml  index.html  openapi_en.yaml
python-client/: README.md  pyproject.toml  tox.ini
python-client/.openapi-generator/: FILES
python-client/deutschland/bundeshaushalt/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
python-client/deutschland/bundeshaushalt/api/: __init__.py  budget_data_api.py
python-client/deutschland/bundeshaushalt/apis/: __init__.py
python-client/deutschland/bundeshaushalt/model/: __init__.py  bad_request.py  budget_data_response.py  budget_data_response_meta.py  budget_data_response_related.py  budget_element.py  labeled_element.py
python-client/deutschland/bundeshaushalt/models/: __init__.py
python-client/docs/: BadRequest.md  BudgetDataApi.md  BudgetDataResponse.md  BudgetDataResponseMeta.md  BudgetDataResponseRelated.md  BudgetElement.md  LabeledElement.md
python-client/sphinx-docs/: conf.py  index.rst
python-client/sphinx-docs/source/: bundeshaushalt.api.rst  bundeshaushalt.apis.rst  bundeshaushalt.model.rst  bundeshaushalt.models.rst  bundeshaushalt.rst  modules.rst
python-client/test/: test_bad_request.py  test_budget_data_api.py  test_budget_data_response.py  test_budget_data_response_meta.py  test_budget_data_response_related.py  test_budget_element.py  test_labeled_element.py
